# lang-test

./: README.md
c/: README.md
c++/: README.md
c/hexdump/: .gitignore  CMakeLists.txt  Makefile
c/hexdump/src/: args.c  args.h  err.c  err.h  help.c  help.h  main.c  str.c  str.h  utils.h
c/primes/: .clang-tidy  CMakeLists.txt  Makefile  README.md  sieve  speeds
c/primes/.zed/: debug.json
c/primes/src/: args.c  args.h  err.c  err.h  help.c  help.h  main.c  primap.c  primap.h  primes.c  primes.h  sieve.c  sieve.h  str.c  str.h  term.h  utils.h
odin/: README.md
odin/hexdump/: error.odin  main.odin  odinfmt.json
odin/hexdump/cli/: args.odin  error.odin  help.odin  parser.odin
odin/hexdump/printers/: ascii.odin  hex.odin  position.odin
odin/primes/: README.md  error.odin  main.odin
odin/primes/cli/: args.odin  error.odin  help.odin
odin/primes/prime/: primes.odin
odin/snake/: main.odin
odin/snake/lm/: vec.odin
rust/: README.md
